@@ -13,5 +13,6 @@ namespace DocumentParser { namespace Business { namespace Engine {
 		~StringMatchMethod();
 		void Initialize(DPI::Document* const document);
 		int FindOccurences(const std::string& searchString);
+		inline std::string GetContent() const { return this->_content; }
 	};
 }}}
